2004-09-02  Martin Baulig  <martin@ximian.com>

	* runtime/net_1_1/Makefile.am (install-data-local): Install
	mscorlib.dll.mdb into $(corlibdir).

	* runtime/net_2_0/Makefile.am: Likewise.

2004-08-30  Zoltan Varga  <vargaz@freemail.hu>

	* scripts/mcs.in: Remove obsolete comment.

2004-08-27  Lluis Sanchez Gual  <lluis@novell.com>

	* data/net_1_1/DefaultWsdlHelpGenerator.aspx: Little fix.
	* data/net_2_0/DefaultWsdlHelpGenerator.aspx: Added information about
	  basic profile compliance.
	* data/net_2_0/machine.config: Use 2.0 assembly versions.

2004-08-26  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (mcs-do-run-test): Depend on '$(tmpinst)/bin/mbas'.
	($(tmpinst)/bin/mbas): Create temporary wrapper file, so that the
	testcases pick the built 'mbas.exe'.

2004-08-17  Zoltan Varga  <vargaz@freemail.hu>

	* mono/os/gc_wrapper.h: Only use thread local alloc if using the included libgc, since the
	stock one has broken headers.

	* configure.in (PLATFORM_WIN32): Make the included libgc the default on windows.

2004-08-17  Dick Porter  <dick@ximian.com>

	* configure.in: Correct intl library for FreeBSD and OpenBSD.
	Fixes bug 62884, patch by Tom McLaughlin (tmclaugh@sdf.lonestar.org).

2004-08-16  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Set new automake variable LIBGC_STATIC_LIBS.

2004-08-14  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in (HAVE_KW_THREAD): Pass USE_COMPILER_TLS to libgc if
	__thread works.

2004-08-11  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Fix __thread test.

2004-08-07  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Add proper checks for the 'undefined reference to '__tls_get_addr' problem.

2004-08-06  Geoff Norton  <gnorton@customerdna.com>

	* configure.in: Add a kqueue check

2004-08-03  Neale Ferguson <Neale.Ferguson@SoftwareAG-usa.com>

	* configure.in: Enable S/390 64-bit JIT.

2004-07-31  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Enable AMD64 JIT.
